# FabricO11y

./: .gitignore  AGENTS.md  Cargo.toml  README.md  pyproject.toml
.github/workflows/: ci.yml
benchmarks/: README.md  basic-compression.md
crates/: README.md
crates/fabric-catalog/: Cargo.toml
crates/fabric-catalog/src/: lib.rs
crates/fabric-core/: Cargo.toml
crates/fabric-core/src/: lib.rs
crates/fabric-py/: Cargo.toml
crates/fabric-py/src/: lib.rs
crates/fabric-schema/: Cargo.toml
crates/fabric-schema/src/: lib.rs
crates/fabric-sdk/: Cargo.toml
crates/fabric-sdk/src/: lib.rs
crates/fabric-segment/: Cargo.toml
crates/fabric-segment/examples/: compression-smoke.rs  generate-fixtures.rs
crates/fabric-segment/src/: lib.rs
crates/fabric-time/: Cargo.toml
crates/fabric-time/src/: lib.rs
docs/: charter.md  glossary.md  repository-layout.md  scope.md
docs/architecture/: segment-format.md
docs/decisions/: ADR-0002-separate-evidence-envelopes.md  ADR-0003-pure-rust-core.md  ADR-0004-embedded-sdk-primary.md  ADR-0005-immutable-segments-sqlite-catalog.md  ADR-0007-multiple-time-axes.md  README.md
docs/evaluation/: README.md
docs/requirements/: README.md
docs/research/: README.md
docs/standard/: evidence-semantics.md
fixtures/: README.md
fixtures/golden/contracts/: manifest.json
fixtures/golden/contracts/invalid/: answer-missing-coverage.json  correction-mixed-operation.json  correction-replacement-without-replacements.json  frontier-sampled-without-rate.json  observation-implicit-class.json  observation-mixed-class.json
fixtures/golden/contracts/valid/: answer.json  correction.json  frontier.json  observation.json
fixtures/recovery/: scenarios.json
fixtures/segment-format/: manifest.json
fixtures/segment-format/binary/: README.md  corrupt-payload.hex  missing-dictionary.hex  truncated.hex  valid.hex
fixtures/segment-format/invalid/: dictionary-missing-training-digest.json  segment-unsupported-version.json
fixtures/segment-format/valid/: dictionary-registry.json  segment-manifest.json
python/: README.md
python/fabrico11y/: __init__.py  _fabrico11y.pyi
schemas/: README.md  fabric.answer.v1.json  fabric.correction.v1.json  fabric.dictionary-registry.v1.json  fabric.frontier.v1.json  fabric.observation.v1.json  fabric.segment.manifest.v1.json
scripts/: validate_contracts.py  verify.py  verify_python_sdk.py
tests/python/: test_sdk.py
