[workspace]
members = ["crates/*"]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.96"

[workspace.dependencies]
fabric-catalog = { path = "crates/fabric-catalog" }
fabric-core = { path = "crates/fabric-core" }
fabric-schema = { path = "crates/fabric-schema" }
fabric-sdk = { path = "crates/fabric-sdk" }
fabric-segment = { path = "crates/fabric-segment" }
fabric-time = { path = "crates/fabric-time" }
pyo3 = { version = "0.29.0", features = ["abi3-py310", "extension-module"] }
rusqlite = { version = "0.40.1", default-features = false, features = ["bundled"] }
serde = { version = "1.0.229", features = ["derive"] }
serde_json = "1.0.151"
sha2 = "0.11.0"
tempfile = "3.27.0"
thiserror = "2.0.19"
time = { version = "0.3.54", default-features = false, features = ["formatting", "parsing", "std"] }
zstd = "0.13.3"
