[build-system]
requires = ["maturin>=1.14,<2"]
build-backend = "maturin"

[project]
name = "fabrico11y"
version = "0.1.0"
description = "Embedded evidence-aware observability runtime"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Rust",
  "Typing :: Typed",
]

[tool.maturin]
manifest-path = "crates/fabric-py/Cargo.toml"
python-source = "python"
module-name = "fabrico11y._fabrico11y"
bindings = "pyo3"
strip = true
